--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,18 @@
 /* 
     General Styles
 */
+
+.btn-lg {
+    padding: 0.4rem 3rem;
+    font-size: 1rem;
+}
+
+.bg-grey {
+    --bs-bg-opacity: 0.85;
+    background-color: rgba(var(--bs-dark-rgb),var(--bs-bg-opacity))!important;
+}
+
+body {
+    background-color: rgb(244, 244, 244);
+}
+
